# VigilantEye

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/Core/: FrameResizePolicy.h  Pipeline.h  SystemController.h
include/GeneralUtils/: Logger.h
include/HAL/Sensors/: IFrameSource.h  VideoFileSource.h  WebcamSource.h
include/UI/: HUD.h
include/Vision/: DNNObjectDetector.h  IVisionAlgorithm.h  MotionDetector.h  ObjectTracker.h
include/Vision/Utils/: Visualizer.h
src/: main.cpp
src/Core/: Pipeline.cpp  SystemController.cpp
src/GeneralUtils/: Logger.cpp
src/HAL/Sensors/: VideoFileSource.cpp  WebcamSource.cpp  WebcamSource.cpp.cpp
src/UI/: HUD.cpp
src/Vision/: DNNObjectDetector.cpp  MotionDetector.cpp  ObjectTracker.cpp
src/Vision/Utils/: Visualizer.cpp
